[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Sprite/Moving/Anglerfish_Lamp.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprite/Moving/Anglerfish_Lighting.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprite/Moving/Anglerfish.png" type="Texture" id=4]
[ext_resource path="res://Element/Mobs/anglerfish.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sprite/Moving/Anglerfish_Fishingrod.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[sub_resource type="CircleShape2D" id=3]
radius = 20.0

[sub_resource type="Animation" id=4]
resource_name = "idle-loop"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -5.0, 10.0, -5.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fishingrod_0:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 44.9999, 59.9999, 45.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fishingrod_0/Fishingrod_1:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -30.0, -35.0, -44.9999 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Fishingrod_0/Fishingrod_1/Fishingrod_2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -30.0, -20.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Fishingrod_0/Fishingrod_1/Fishingrod_2/Fishingrod_3:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -45.0, -30.0, -44.9999 ]
}

[node name="Anglerfish" type="Node2D"]
position = Vector2( 80, 80 )

[node name="Node2D" type="Node2D" parent="."]
rotation = -0.07846
script = ExtResource( 5 )

[node name="Fishingrod_0" type="Sprite" parent="Node2D"]
position = Vector2( -7.84219, -12.5975 )
rotation = 0.785398
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_bone_": true
}

[node name="Fishingrod_1" type="Sprite" parent="Node2D/Fishingrod_0"]
position = Vector2( -13.5407, 3.34667 )
rotation = -0.711902
texture = ExtResource( 6 )
__meta__ = {
"_edit_bone_": true
}

[node name="Fishingrod_2" type="Sprite" parent="Node2D/Fishingrod_0/Fishingrod_1"]
position = Vector2( -12.1012, 3.14211 )
rotation = -0.366679
texture = ExtResource( 6 )
__meta__ = {
"_edit_bone_": true
}

[node name="Fishingrod_3" type="Sprite" parent="Node2D/Fishingrod_0/Fishingrod_1/Fishingrod_2"]
position = Vector2( -10.8069, 4.21825 )
rotation = -0.746367
texture = ExtResource( 6 )
__meta__ = {
"_edit_bone_": true
}

[node name="PlayerDetect" type="Area2D" parent="Node2D/Fishingrod_0/Fishingrod_1/Fishingrod_2/Fishingrod_3"]
position = Vector2( -14, 0 )

[node name="Lamp" type="Sprite" parent="Node2D/Fishingrod_0/Fishingrod_1/Fishingrod_2/Fishingrod_3/PlayerDetect"]
position = Vector2( -3.8147e-06, -3.8147e-06 )
scale = Vector2( 1, 1 )
texture = ExtResource( 1 )

[node name="AlertShape" type="CollisionShape2D" parent="Node2D/Fishingrod_0/Fishingrod_1/Fishingrod_2/Fishingrod_3/PlayerDetect"]
rotation = -5.96047e-08
scale = Vector2( 1, 1 )
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="Node2D/Fishingrod_0/Fishingrod_1/Fishingrod_2/Fishingrod_3/PlayerDetect"]
scale = Vector2( 1, 1 )
texture = ExtResource( 3 )
texture_scale = 1.25
color = Color( 0.92549, 0.917647, 0.917647, 1 )

[node name="Fish" type="Sprite" parent="Node2D"]
texture = ExtResource( 4 )

[node name="BumperDetect" type="Area2D" parent="Node2D/Fish"]

[node name="DetectShape" type="CollisionShape2D" parent="Node2D/Fish/BumperDetect"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D"]
anims/idle-loop = SubResource( 4 )
[connection signal="body_entered" from="Node2D/Fishingrod_0/Fishingrod_1/Fishingrod_2/Fishingrod_3/PlayerDetect" to="Node2D" method="_on_PlayerDetect_body_entered"]
[connection signal="body_exited" from="Node2D/Fishingrod_0/Fishingrod_1/Fishingrod_2/Fishingrod_3/PlayerDetect" to="Node2D" method="_on_PlayerDetect_body_exited"]
[connection signal="body_entered" from="Node2D/Fish/BumperDetect" to="Node2D" method="_on_BumperDetect_body_entered"]
[connection signal="body_exited" from="Node2D/Fish/BumperDetect" to="Node2D" method="_on_BumperDetect_body_exited"]
[connection signal="animation_finished" from="Node2D/AnimationPlayer" to="Node2D" method="_on_AnimationPlayer_animation_finished"]
